# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
migrations/: 20241127002843_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
